# product-reports

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: a.csv  b.csv
src/brand_reports/: cli.py
src/brand_reports/reports/: __init__.py  average_rating.py  base.py  registry.py
src/brand_reports/utils/: csv_reader.py
src/tests/: test_average_rating_report.py  test_cli_missing_file.py  test_cli_success.py  test_cli_unknown_report.py  test_csv_reader.py  test_e2e_cli_module.py  test_report_registry.py
