[project]
name = "product-reports"
version = "0.1.0"
description = ""
authors = [
    { name = "lian", email = "d.samat.work@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "tabulate>=0.9,<1.0"
]

# dev зависимости для тестов
[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"

# сам запуск через поетри
[tool.poetry.scripts]
brand-report = "brand_reports.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"