[tool.poetry]
name = "product-reports"
version = "0.1.0"
description = ""
authors = ["lian <d.samat.work@gmail.com>"]
readme = "README.md"
packages = [{ include = "brand_reports", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
tabulate = ">=0.9,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"

# сам запуск через поетри
[tool.poetry.scripts]
brand-report = "brand_reports.cli:main"

# тесты
[tool.pytest.ini_options]
addopts = "-q --cov=brand_reports --cov-report=term-missing --cov-fail-under=80"
testpaths = ["src/tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"